monotone (0.40-2) unstable; urgency=low

  * Install HTML documentation in /usr/share/doc/monotone/html, not
    /usr/share/doc/html.  (Closes: #480072)
  * Make /usr/share/doc/monotone-server and /usr/share/doc/monotone-doc
    symlinks to /usr/share/doc/monotone; do not ship any files in those
    packages that are also in the main monotone package.  This requires
    adding a dependency of monotone-doc on monotone.
  * Register monotone manual with doc-base.
  * Improve description of monotone-doc package.

 -- Zack Weinberg <zackw@panix.com>  Sat, 24 May 2008 09:30:07 -0400

monotone (0.40-1) unstable; urgency=low

  [ Zack Weinberg ]
  * New upstream release.
    - Upstream "make distclean" now cleans up after "make html".
      (Closes: #473402)

 -- Richard Levitte <richard@levitte.org>  Fri, 11 Apr 2008 00:50:44 +0200

monotone (0.39-90) unstable; urgency=low

  * monotone-server.postinst: update the trigger version for a db migrate,
    since the schema has changed.

 -- Richard Levitte <richard@levitte.org>  Mon, 31 Mar 2008 14:05:43 +0200

monotone (0.39-2) unstable; urgency=low

  * Build-dependency on patch (not dpatch) restored; it was accidentally
    removed in 0.39-1 along with dpatch.  The test suite uses it.
  * Various vestiges of dpatch use removed from debian/rules.

 -- Zack Weinberg <zackw@panix.com>  Mon, 31 Mar 2008 20:47:30 -0400

monotone (0.39-1) unstable; urgency=low

  [ Zack Weinberg ]
  * New upstream release.  Closes: #473252.
    - Can now be built with gcc 4.3 snapshots.  (Closes: #455646)
  * Enable use of system libpcre, set appropriate Build-Depends.

  [ Richard Levitte ]
  * The patch to disable the SIGPIPE test isn't needed any more.
  * Build-dependency on dpatch dropped again, as it is unused.

 -- Richard Levitte <richard@levitte.org>  Mon, 25 Feb 2008 10:55:36 -0500

monotone (0.38-1) unstable; urgency=low

  [ Richard Levitte ]
  * New upstream release.