@@ -1,0 +1,6 @@
+/* Stub - needs implementing.  See lua-testsuite.lua (very end) for rationale,
+   and unix/tester-check-net.c for behavior to emulate.  */
+int main(void)
+{
+  return 0;
+}
